--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "sign-jades",
+  "name": "jades-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "ts-node app.ts"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "SECTOR Orange",
+  "license": "MIT",
   "devDependencies": {
     "@types/node-forge": "^1.3.11",
     "@types/node-rsa": "^1.1.4",
